--- a/ChangeLog
+++ b/ChangeLog
@@ -35,3 +35,10 @@ v0.0.1.3
 v0.0.1.4
 -Re-enable cursor after program termination.
 
+v0.0.1.5
+-Fixed Help to reflect program as it is now layed out.
+-Changed displayed wording.
+-Added colors to output.
+-Cleaned up Makefile
+
+
