--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,10 @@ v0.0.1.1
 -Fixed version.
 -Patched Makefile
 
+v0.0.1.2
+-Removed option for verbose, always verbose.
+-Changed default port.
+-Removed new line for progress status (verbose).
 
 Referenced Sources
 
