--- a/ChangeLog
+++ b/ChangeLog
@@ -33,6 +33,10 @@ v0.0.1.2
 -Changed default port.
 -Removed new line for progress status (verbose).
 
+v0.0.1.3
+-Progress status removed cursor (looks cleaner).
+
+
 Referenced Sources
 
 https://github.com/joshualockhart/hermes
